# FastApi-websocket

./: README.md  pyproject.toml
src/: db_session.py  main.py  requirements.txt
src/chat/: models.py  router.py
src/pages/: router.py
src/templates/: base.html  chat.html
